// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Post component should render correctly 1`] = `
<div>
  <div
    class="blog-post with-recommended"
  >
    <div
      class="blog-post__background"
    />
     
    <div
      class="blog-post__inner-container"
    >
      <div
        class="blog-post__share"
      >
        <sharenetwork-stub
          class="blog-post__share-link blog-post__share-link icon-wrapper__icon icon-wrapper__facebook-icon"
          network="facebook"
          title="How to Handover a Software Project to Another Team | Mad Devs Blog"
          url="undefined/blog/software-project-handover/"
        />
         
        <sharenetwork-stub
          class="blog-post__share-link blog-post__share-link icon-wrapper__icon icon-wrapper__twitter-icon"
          network="twitter"
          title="How to Handover a Software Project to Another Team | Mad Devs Blog"
          url="undefined/blog/software-project-handover/"
        />
         
        <sharenetwork-stub
          class="blog-post__share-link blog-post__share-link icon-wrapper__icon icon-wrapper__linkedin-icon"
          network="linkedin"
          title="How to Handover a Software Project to Another Team | Mad Devs Blog"
          url="undefined/blog/software-project-handover/"
        />
      </div>
       
      <div
        class="blog-post__introduction-container"
      >
         
        <h1
          class="blog-post__blog-title title"
        >
          
    text
  
        </h1>
         
        <p
          class="blog-post__blog-sub-title"
        >
          
    text
  
        </p>
         
        <div
          class="blog-post__post-info"
        >
          <div
            class="blog-post__author"
          >
            <img
              alt="text"
              class="blog-post__author-image img_lazy"
              data-src="https://images.prismic.io/superpupertest/c3b0ca2f-b28b-455c-b75b-fa880ee66c82_01.jpeg?auto=compress,format&rect=0,1,797,797&w=40&h=40"
            />
             
            <div
              class="blog-post__author-info"
            >
              <p
                class="blog-post__author-name"
              >
                
      text
    
              </p>
               
              <div
                class="blog-post__data-of-creation"
              >
                <span
                  class="blog-post__author-title"
                >
                  Delivery manager
                </span>
              </div>
            </div>
          </div>
           
          <div
            class="blog-post__date-tag"
          >
            <div
              class="blog-post__date"
            >
              
          Apr 12, 2021
        
            </div>
             
            <div
              class="blog-post__tag"
            >
              
          Project Management
        
            </div>
          </div>
        </div>
         
        <img
          alt="How to Handover a Software Project to Another Team."
          class="blog-post__introduction-image blog-post__introduction-image--with-background"
          height="533"
          src="https://images.prismic.io/superpupertest/afa41339-f2f8-4f1d-8640-4b89d5d9d509_SPH.jpg?auto=compress,format&rect=0,1,2000,1084&w=983&h=533"
          width="983"
        />
      </div>
       
      <div
        class="blog-post__main-content"
      >
        <div
          class="table-of-contents"
        >
          <div
            class="table-of-contents__title"
          >
            
    Table of contents
  
          </div>
           
          <ol
            class="table-of-contents__list"
          />
        </div>
         
        <section
          class="blog-post__text-container"
        >
          <section
            class=""
          >
            <div
              class="post-part single"
            >
              <prismicrichtext-stub
                class="textslice"
                field="[object Object]"
              />
            </div>
          </section>
          <section
            class=""
          >
            <div
              class="embed link"
            >
              <prismicembed-stub
                class="embed__link"
                field="[object Object]"
                target="_blank"
              />
               
              <div
                class="embed__image-wrapper"
              >
                <div
                  class="embed__image"
                  style="background-image: url(https://images.prismic.io/superpupertest/f5397ee9-1712-42f0-9bd4-7c12f5963717_1.jpg?auto=compress,format&rect=0,80,2044,1108&w=983&h=533);"
                />
              </div>
            </div>
          </section>
          <section
            class=""
          >
            <div
              class="post-part single"
            >
              <prismicrichtext-stub
                class="textslice"
                field="[object Object]"
              />
            </div>
          </section>
          <section
            class=""
          >
            <div
              class="embed link"
            >
              <prismicembed-stub
                class="embed__link"
                field="[object Object]"
                target="_blank"
              />
               
              <div
                class="embed__image-wrapper"
              >
                <div
                  class="embed__image"
                  style="background-image: url(https://images.prismic.io/superpupertest/c502d563-5bc9-463c-a3d0-5fa15f8be1bf_red-flags-in-software-development.jpeg?auto=compress,format&rect=0,80,2044,1108&w=983&h=533);"
                />
              </div>
            </div>
          </section>
          <section
            class=""
          >
            <div
              class="post-part single"
            >
              <prismicrichtext-stub
                class="textslice"
                field="[object Object],[object Object],[object Object]"
              />
            </div>
          </section>
          <section
            class=""
          >
            <ol
              class="case-list_numbered"
            >
              <div>
                <p>
                  [object Object]
                </p>
              </div>
               
              <li
                class="case_list-numbered_item"
              >
                
    text
  
              </li>
              <li
                class="case_list-numbered_item"
              >
                
    text
  
              </li>
              <li
                class="case_list-numbered_item"
              >
                
    text
  
              </li>
            </ol>
          </section>
          <section
            class=""
          >
            <div
              class="post-part single"
            >
              <prismicrichtext-stub
                class="textslice"
                field="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
              />
            </div>
          </section>
          <section
            class=""
          >
            <div
              class="embed link"
            >
              <prismicembed-stub
                class="embed__link"
                field="[object Object]"
                target="_blank"
              />
               
              <div
                class="embed__image-wrapper"
              >
                <div
                  class="embed__image"
                  style="background-image: url(https://images.prismic.io/superpupertest/f43c246a-4768-4052-b3ad-0f181ca5df6b_hidden-costs-of-software-development.jpeg?auto=compress,format&rect=0,78,2044,1108&w=983&h=533);"
                />
              </div>
            </div>
          </section>
          <section
            class=""
          >
            <div
              class="post-part single"
            >
              <prismicrichtext-stub
                class="textslice"
                field="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
              />
            </div>
          </section>
          <section
            class=""
          >
            <div
              class="embed link"
            >
              <prismicembed-stub
                class="embed__link"
                field="[object Object]"
                target="_blank"
              />
               
              <div
                class="embed__image-wrapper"
              >
                <div
                  class="embed__image"
                  style="background-image: url(https://images.prismic.io/superpupertest/83c0f2c4-3ad0-48c6-b040-09c763fda296_9.+Technical+Debt+101_+The+Bottomless+Pit+Of+Cheap+Software+Development.png?auto=compress,format&rect=0,80,2044,1108&w=983&h=533);"
                />
              </div>
            </div>
          </section>
          <section
            class=""
          >
            <div
              class="post-part single"
            >
              <prismicrichtext-stub
                class="textslice"
                field="[object Object],[object Object],[object Object],[object Object],[object Object]"
              />
            </div>
          </section>
          <section
            class=""
          >
            <div
              class="embed link"
            >
              <prismicembed-stub
                class="embed__link"
                field="[object Object]"
                target="_blank"
              />
               
              <div
                class="embed__image-wrapper"
              >
                <div
                  class="embed__image"
                  style="background-image: url(https://images.prismic.io/superpupertest/0e07041e-3600-4dd5-a101-99886804861a_What+is+SWOT+team_.jpg?auto=compress,format&rect=0,1,2000,1084&w=983&h=533);"
                />
              </div>
            </div>
          </section>
          <section
            class=""
          >
            <div
              class="post-part single"
            >
              <prismicrichtext-stub
                class="textslice"
                field="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
              />
            </div>
          </section>
          <section
            class=""
          >
            <div
              class="post-part single"
            >
              <prismicrichtext-stub
                class="textslice"
                field="[object Object],[object Object],[object Object]"
              />
            </div>
          </section>
          <section
            class=""
          >
            <hr />
          </section>
          <section
            class=""
          >
            <div>
              <div
                class="post-part single"
              >
                <a
                  class="block-img"
                  href="text"
                  target="_self"
                >
                  <img
                    alt="IT consulting."
                    class="img_lazy"
                    data-src="https://images.prismic.io/superpupertest/7aaf1c11-5668-418a-a02b-47c62dec3106_IT+Consulting+-+Technology+Stack.jpg?auto=compress,format&rect=0,0,4800,1200&w=1200&h=300"
                  />
                </a>
              </div>
            </div>
          </section>
        </section>
      </div>
    </div>
     
    <div
      class="blog-post__recommended-posts"
    >
      <div
        class="blog-post__recommended-posts-list container"
      >
        <section
          class="blog-post__recommended-post"
          post="[object Object]"
        >
          <nuxtlink-stub
            class=""
            class-name="recommended-post"
            to="/blog/ultimate-guide-to-time-and-materials-contract/"
          >
            <div
              class="blog-post"
            >
              <img
                alt="Time and Materials in IT Outsourcing."
                class="blog-post__image img_lazy"
                data-src="https://images.prismic.io/superpupertest/d4a67382-896f-4ee6-ab1a-4cf4f326cedd_Times+%26+Materials+in+IT+outsourcing.jpg?auto=compress,format&rect=0,1,2000,1084&w=983&h=533"
                height="217"
                width="400"
              />
               
              <div>
                <h2
                  class="blog-post__title blog-post__title--short"
                  title="text"
                >
                  
        text
      
                </h2>
                 
                <h2
                  class="blog-post__title blog-post__title--very-short"
                  title="text"
                >
                  
        text
      
                </h2>
                 
                <h2
                  class="blog-post__title blog-post__title--full"
                  title="text"
                >
                  
        text
      
                </h2>
                 
                <p
                  class="blog-post__paragraph"
                  data-testid="test-blog-post"
                >
                  
        It sounds bizarre, but software development can start months (if not years) before the first line of code is typed. Moreover, the earliest strategic...
      
                </p>
                 
                <div
                  class="blog-post__meta"
                >
                  <span
                    class="created-at"
                  >
                    Mar 30, 2021
                  </span>
                   
                  <span
                    class="tag"
                  >
                    Project Management
                  </span>
                </div>
                 
                <div
                  class="blog-post__author"
                >
                  <img
                    alt="text"
                    class="blog-post__author-image img_lazy"
                    data-src="https://images.prismic.io/superpupertest/c3b0ca2f-b28b-455c-b75b-fa880ee66c82_01.jpeg?auto=compress,format&rect=0,1,797,797&w=40&h=40"
                  />
                   
                  <div
                    class="blog-post__author-info"
                  >
                    <p
                      class="blog-post__author-name"
                    >
                      
      text
    
                    </p>
                     
                    <div
                      class="blog-post__data-of-creation"
                    >
                      <span
                        class="blog-post__author-title"
                      >
                        Delivery manager
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </nuxtlink-stub>
        </section>
        <section
          class="blog-post__recommended-post"
          post="[object Object]"
        >
          <nuxtlink-stub
            class=""
            class-name="recommended-post"
            to="/blog/how-to-automate-jira-mad-devs-experience/"
          >
            <div
              class="blog-post"
            >
              <img
                alt="Mad Devs + JIRA."
                class="blog-post__image img_lazy"
                data-src="https://images.prismic.io/superpupertest/10dfe050-06a5-4dba-b3d6-3cb97401b32d_1_FBu9fkHh-CevUb01sjYuWQ.jpeg?auto=compress,format&rect=22,0,1356,735&w=983&h=533"
                height="217"
                width="400"
              />
               
              <div>
                <h2
                  class="blog-post__title blog-post__title--short"
                  title="text"
                >
                  
        text
      
                </h2>
                 
                <h2
                  class="blog-post__title blog-post__title--very-short"
                  title="text"
                >
                  
        text
      
                </h2>
                 
                <h2
                  class="blog-post__title blog-post__title--full"
                  title="text"
                >
                  
        text
      
                </h2>
                 
                <p
                  class="blog-post__paragraph"
                  data-testid="test-blog-post"
                >
                  
        People bring a human factor to company regulations and standards. We forget tasks while creating to-do lists and waste time by fixing the crappy...
      
                </p>
                 
                <div
                  class="blog-post__meta"
                >
                  <span
                    class="created-at"
                  >
                    Jun 04, 2020
                  </span>
                   
                  <span
                    class="tag"
                  >
                    Project Management
                  </span>
                </div>
                 
                <div
                  class="blog-post__author"
                >
                  <img
                    alt="text"
                    class="blog-post__author-image img_lazy"
                    data-src="https://images.prismic.io/superpupertest/8671ab62-f850-4492-bd73-d9dde702a21e_2_igUGGSyiqBiGqydOnfZ6ZQ.jpeg?auto=compress,format&rect=0,0,262,262&w=40&h=40"
                  />
                   
                  <div
                    class="blog-post__author-info"
                  >
                    <p
                      class="blog-post__author-name"
                    >
                      
      text
    
                    </p>
                     
                    <div
                      class="blog-post__data-of-creation"
                    >
                      <span
                        class="blog-post__author-title"
                      >
                        Head of marketing department
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </nuxtlink-stub>
        </section>
        <section
          class="blog-post__recommended-post"
          post="[object Object]"
        >
          <nuxtlink-stub
            class=""
            class-name="recommended-post"
            to="/blog/software-features-acceptance-process-by-clients/"
          >
            <div
              class="blog-post"
            >
              <img
                alt="Two yellow robots opposite board."
                class="blog-post__image img_lazy"
                data-src="https://images.prismic.io/superpupertest/493d2497-7257-4bf6-94c5-5659a0779b4f_6.png?auto=compress,format&rect=0,63,1000,542&w=983&h=533"
                height="217"
                width="400"
              />
               
              <div>
                <h2
                  class="blog-post__title blog-post__title--short"
                  title="text"
                >
                  
        text
      
                </h2>
                 
                <h2
                  class="blog-post__title blog-post__title--very-short"
                  title="text"
                >
                  
        text
      
                </h2>
                 
                <h2
                  class="blog-post__title blog-post__title--full"
                  title="text"
                >
                  
        text
      
                </h2>
                 
                <p
                  class="blog-post__paragraph"
                  data-testid="test-blog-post"
                >
                  
        Feature acceptance by the client is one of the important phases in the project’s life cycle, which ultimately determines the product’s functionality...
      
                </p>
                 
                <div
                  class="blog-post__meta"
                >
                  <span
                    class="created-at"
                  >
                    Jul 30, 2020
                  </span>
                   
                  <span
                    class="tag"
                  >
                    Project Management
                  </span>
                </div>
                 
                <div
                  class="blog-post__author"
                >
                  <img
                    alt="text"
                    class="blog-post__author-image img_lazy"
                    data-src="https://images.prismic.io/superpupertest/2d5f5b47-2b05-493d-9cca-aaaec6245bc6_01.jpeg?auto=compress,format&rect=0,0,800,800&w=40&h=40"
                  />
                   
                  <div
                    class="blog-post__author-info"
                  >
                    <p
                      class="blog-post__author-name"
                    >
                      
      text
    
                    </p>
                     
                    <div
                      class="blog-post__data-of-creation"
                    >
                      <span
                        class="blog-post__author-title"
                      >
                        Delivery manager
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </nuxtlink-stub>
        </section>
      </div>
    </div>
     
    <!---->
     
    <!---->
     
    <div
      class="progress-bar"
    />
  </div>
</div>
`;

exports[`Post component should render correctly 2`] = `
<div>
  <div
    class="blog-post with-recommended"
  >
    <div
      class="blog-post__background"
    />
     
    <div
      class="blog-post__inner-container"
    >
      <div
        class="blog-post__share"
      >
        <sharenetwork-stub
          class="blog-post__share-link blog-post__share-link icon-wrapper__icon icon-wrapper__facebook-icon"
          network="facebook"
          title="How to Handover a Software Project to Another Team | Mad Devs Blog"
          url="undefined/blog/software-project-handover/"
        />
         
        <sharenetwork-stub
          class="blog-post__share-link blog-post__share-link icon-wrapper__icon icon-wrapper__twitter-icon"
          network="twitter"
          title="How to Handover a Software Project to Another Team | Mad Devs Blog"
          url="undefined/blog/software-project-handover/"
        />
         
        <sharenetwork-stub
          class="blog-post__share-link blog-post__share-link icon-wrapper__icon icon-wrapper__linkedin-icon"
          network="linkedin"
          title="How to Handover a Software Project to Another Team | Mad Devs Blog"
          url="undefined/blog/software-project-handover/"
        />
      </div>
       
      <div
        class="blog-post__introduction-container"
      >
         
        <h1
          class="blog-post__blog-title title"
        >
          
    text
  
        </h1>
         
        <p
          class="blog-post__blog-sub-title"
        >
          
    text
  
        </p>
         
        <div
          class="blog-post__post-info"
        >
          <div
            class="blog-post__author"
          >
            <img
              alt="text"
              class="blog-post__author-image img_lazy"
              data-src="https://images.prismic.io/superpupertest/c3b0ca2f-b28b-455c-b75b-fa880ee66c82_01.jpeg?auto=compress,format&rect=0,1,797,797&w=40&h=40"
            />
             
            <div
              class="blog-post__author-info"
            >
              <p
                class="blog-post__author-name"
              >
                
      text
    
              </p>
               
              <div
                class="blog-post__data-of-creation"
              >
                <span
                  class="blog-post__author-title"
                >
                  Delivery manager
                </span>
              </div>
            </div>
          </div>
           
          <div
            class="blog-post__date-tag"
          >
            <div
              class="blog-post__date"
            >
              
          Apr 12, 2021
        
            </div>
             
            <div
              class="blog-post__tag"
            >
              
          Project Management
        
            </div>
          </div>
        </div>
         
        <img
          alt="How to Handover a Software Project to Another Team."
          class="blog-post__introduction-image blog-post__introduction-image--with-background"
          height="533"
          src="https://images.prismic.io/superpupertest/afa41339-f2f8-4f1d-8640-4b89d5d9d509_SPH.jpg?auto=compress,format&rect=0,1,2000,1084&w=983&h=533"
          width="983"
        />
      </div>
       
      <div
        class="blog-post__main-content"
      >
        <div
          class="table-of-contents"
        >
          <div
            class="table-of-contents__title"
          >
            
    Table of contents
  
          </div>
           
          <ol
            class="table-of-contents__list"
          />
        </div>
         
        <section
          class="blog-post__text-container"
        >
          <section
            class=""
          >
            <div
              class="post-part single"
            >
              <prismicrichtext-stub
                class="textslice"
                field="[object Object]"
              />
            </div>
          </section>
          <section
            class=""
          >
            <div
              class="embed link"
            >
              <prismicembed-stub
                class="embed__link"
                field="[object Object]"
                target="_blank"
              />
               
              <div
                class="embed__image-wrapper"
              >
                <div
                  class="embed__image"
                  style="background-image: url(https://images.prismic.io/superpupertest/f5397ee9-1712-42f0-9bd4-7c12f5963717_1.jpg?auto=compress,format&rect=0,80,2044,1108&w=983&h=533);"
                />
              </div>
            </div>
          </section>
          <section
            class=""
          >
            <div
              class="post-part single"
            >
              <prismicrichtext-stub
                class="textslice"
                field="[object Object]"
              />
            </div>
          </section>
          <section
            class=""
          >
            <div
              class="embed link"
            >
              <prismicembed-stub
                class="embed__link"
                field="[object Object]"
                target="_blank"
              />
               
              <div
                class="embed__image-wrapper"
              >
                <div
                  class="embed__image"
                  style="background-image: url(https://images.prismic.io/superpupertest/c502d563-5bc9-463c-a3d0-5fa15f8be1bf_red-flags-in-software-development.jpeg?auto=compress,format&rect=0,80,2044,1108&w=983&h=533);"
                />
              </div>
            </div>
          </section>
          <section
            class=""
          >
            <div
              class="post-part single"
            >
              <prismicrichtext-stub
                class="textslice"
                field="[object Object],[object Object],[object Object]"
              />
            </div>
          </section>
          <section
            class=""
          >
            <ol
              class="case-list_numbered"
            >
              <div>
                <p>
                  [object Object]
                </p>
              </div>
               
              <li
                class="case_list-numbered_item"
              >
                
    text
  
              </li>
              <li
                class="case_list-numbered_item"
              >
                
    text
  
              </li>
              <li
                class="case_list-numbered_item"
              >
                
    text
  
              </li>
            </ol>
          </section>
          <section
            class=""
          >
            <div
              class="post-part single"
            >
              <prismicrichtext-stub
                class="textslice"
                field="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
              />
            </div>
          </section>
          <section
            class=""
          >
            <div
              class="embed link"
            >
              <prismicembed-stub
                class="embed__link"
                field="[object Object]"
                target="_blank"
              />
               
              <div
                class="embed__image-wrapper"
              >
                <div
                  class="embed__image"
                  style="background-image: url(https://images.prismic.io/superpupertest/f43c246a-4768-4052-b3ad-0f181ca5df6b_hidden-costs-of-software-development.jpeg?auto=compress,format&rect=0,78,2044,1108&w=983&h=533);"
                />
              </div>
            </div>
          </section>
          <section
            class=""
          >
            <div
              class="post-part single"
            >
              <prismicrichtext-stub
                class="textslice"
                field="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
              />
            </div>
          </section>
          <section
            class=""
          >
            <div
              class="embed link"
            >
              <prismicembed-stub
                class="embed__link"
                field="[object Object]"
                target="_blank"
              />
               
              <div
                class="embed__image-wrapper"
              >
                <div
                  class="embed__image"
                  style="background-image: url(https://images.prismic.io/superpupertest/83c0f2c4-3ad0-48c6-b040-09c763fda296_9.+Technical+Debt+101_+The+Bottomless+Pit+Of+Cheap+Software+Development.png?auto=compress,format&rect=0,80,2044,1108&w=983&h=533);"
                />
              </div>
            </div>
          </section>
          <section
            class=""
          >
            <div
              class="post-part single"
            >
              <prismicrichtext-stub
                class="textslice"
                field="[object Object],[object Object],[object Object],[object Object],[object Object]"
              />
            </div>
          </section>
          <section
            class=""
          >
            <div
              class="embed link"
            >
              <prismicembed-stub
                class="embed__link"
                field="[object Object]"
                target="_blank"
              />
               
              <div
                class="embed__image-wrapper"
              >
                <div
                  class="embed__image"
                  style="background-image: url(https://images.prismic.io/superpupertest/0e07041e-3600-4dd5-a101-99886804861a_What+is+SWOT+team_.jpg?auto=compress,format&rect=0,1,2000,1084&w=983&h=533);"
                />
              </div>
            </div>
          </section>
          <section
            class=""
          >
            <div
              class="post-part single"
            >
              <prismicrichtext-stub
                class="textslice"
                field="[object Object],[object Object],[object Object],[object Object],[object Object],[object Object]"
              />
            </div>
          </section>
          <section
            class=""
          >
            <div
              class="post-part single"
            >
              <prismicrichtext-stub
                class="textslice"
                field="[object Object],[object Object],[object Object]"
              />
            </div>
          </section>
          <section
            class=""
          >
            <hr />
          </section>
          <section
            class=""
          >
            <div>
              <div
                class="post-part single"
              >
                <a
                  class="block-img"
                  href="text"
                  target="_self"
                >
                  <img
                    alt="IT consulting."
                    class="img_lazy"
                    data-src="https://images.prismic.io/superpupertest/7aaf1c11-5668-418a-a02b-47c62dec3106_IT+Consulting+-+Technology+Stack.jpg?auto=compress,format&rect=0,0,4800,1200&w=1200&h=300"
                  />
                </a>
              </div>
            </div>
          </section>
        </section>
      </div>
    </div>
     
    <div
      class="blog-post__recommended-posts"
    >
      <div
        class="blog-post__recommended-posts-list container"
      >
        <section
          class="blog-post__recommended-post"
          post="[object Object]"
        >
          <nuxtlink-stub
            class=""
            class-name="recommended-post"
            to="/blog/ultimate-guide-to-time-and-materials-contract/"
          >
            <div
              class="blog-post"
            >
              <img
                alt="Time and Materials in IT Outsourcing."
                class="blog-post__image img_lazy"
                data-src="https://images.prismic.io/superpupertest/d4a67382-896f-4ee6-ab1a-4cf4f326cedd_Times+%26+Materials+in+IT+outsourcing.jpg?auto=compress,format&rect=0,1,2000,1084&w=983&h=533"
                height="217"
                width="400"
              />
               
              <div>
                <h2
                  class="blog-post__title blog-post__title--short"
                  title="text"
                >
                  
        text
      
                </h2>
                 
                <h2
                  class="blog-post__title blog-post__title--very-short"
                  title="text"
                >
                  
        text
      
                </h2>
                 
                <h2
                  class="blog-post__title blog-post__title--full"
                  title="text"
                >
                  
        text
      
                </h2>
                 
                <p
                  class="blog-post__paragraph"
                  data-testid="test-blog-post"
                >
                  
        It sounds bizarre, but software development can start months (if not years) before the first line of code is typed. Moreover, the earliest strategic...
      
                </p>
                 
                <div
                  class="blog-post__meta"
                >
                  <span
                    class="created-at"
                  >
                    Mar 30, 2021
                  </span>
                   
                  <span
                    class="tag"
                  >
                    Project Management
                  </span>
                </div>
                 
                <div
                  class="blog-post__author"
                >
                  <img
                    alt="text"
                    class="blog-post__author-image img_lazy"
                    data-src="https://images.prismic.io/superpupertest/c3b0ca2f-b28b-455c-b75b-fa880ee66c82_01.jpeg?auto=compress,format&rect=0,1,797,797&w=40&h=40"
                  />
                   
                  <div
                    class="blog-post__author-info"
                  >
                    <p
                      class="blog-post__author-name"
                    >
                      
      text
    
                    </p>
                     
                    <div
                      class="blog-post__data-of-creation"
                    >
                      <span
                        class="blog-post__author-title"
                      >
                        Delivery manager
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </nuxtlink-stub>
        </section>
        <section
          class="blog-post__recommended-post"
          post="[object Object]"
        >
          <nuxtlink-stub
            class=""
            class-name="recommended-post"
            to="/blog/how-to-automate-jira-mad-devs-experience/"
          >
            <div
              class="blog-post"
            >
              <img
                alt="Mad Devs + JIRA."
                class="blog-post__image img_lazy"
                data-src="https://images.prismic.io/superpupertest/10dfe050-06a5-4dba-b3d6-3cb97401b32d_1_FBu9fkHh-CevUb01sjYuWQ.jpeg?auto=compress,format&rect=22,0,1356,735&w=983&h=533"
                height="217"
                width="400"
              />
               
              <div>
                <h2
                  class="blog-post__title blog-post__title--short"
                  title="text"
                >
                  
        text
      
                </h2>
                 
                <h2
                  class="blog-post__title blog-post__title--very-short"
                  title="text"
                >
                  
        text
      
                </h2>
                 
                <h2
                  class="blog-post__title blog-post__title--full"
                  title="text"
                >
                  
        text
      
                </h2>
                 
                <p
                  class="blog-post__paragraph"
                  data-testid="test-blog-post"
                >
                  
        People bring a human factor to company regulations and standards. We forget tasks while creating to-do lists and waste time by fixing the crappy...
      
                </p>
                 
                <div
                  class="blog-post__meta"
                >
                  <span
                    class="created-at"
                  >
                    Jun 04, 2020
                  </span>
                   
                  <span
                    class="tag"
                  >
                    Project Management
                  </span>
                </div>
                 
                <div
                  class="blog-post__author"
                >
                  <img
                    alt="text"
                    class="blog-post__author-image img_lazy"
                    data-src="https://images.prismic.io/superpupertest/8671ab62-f850-4492-bd73-d9dde702a21e_2_igUGGSyiqBiGqydOnfZ6ZQ.jpeg?auto=compress,format&rect=0,0,262,262&w=40&h=40"
                  />
                   
                  <div
                    class="blog-post__author-info"
                  >
                    <p
                      class="blog-post__author-name"
                    >
                      
      text
    
                    </p>
                     
                    <div
                      class="blog-post__data-of-creation"
                    >
                      <span
                        class="blog-post__author-title"
                      >
                        Head of marketing department
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </nuxtlink-stub>
        </section>
        <section
          class="blog-post__recommended-post"
          post="[object Object]"
        >
          <nuxtlink-stub
            class=""
            class-name="recommended-post"
            to="/blog/software-features-acceptance-process-by-clients/"
          >
            <div
              class="blog-post"
            >
              <img
                alt="Two yellow robots opposite board."
                class="blog-post__image img_lazy"
                data-src="https://images.prismic.io/superpupertest/493d2497-7257-4bf6-94c5-5659a0779b4f_6.png?auto=compress,format&rect=0,63,1000,542&w=983&h=533"
                height="217"
                width="400"
              />
               
              <div>
                <h2
                  class="blog-post__title blog-post__title--short"
                  title="text"
                >
                  
        text
      
                </h2>
                 
                <h2
                  class="blog-post__title blog-post__title--very-short"
                  title="text"
                >
                  
        text
      
                </h2>
                 
                <h2
                  class="blog-post__title blog-post__title--full"
                  title="text"
                >
                  
        text
      
                </h2>
                 
                <p
                  class="blog-post__paragraph"
                  data-testid="test-blog-post"
                >
                  
        Feature acceptance by the client is one of the important phases in the project’s life cycle, which ultimately determines the product’s functionality...
      
                </p>
                 
                <div
                  class="blog-post__meta"
                >
                  <span
                    class="created-at"
                  >
                    Jul 30, 2020
                  </span>
                   
                  <span
                    class="tag"
                  >
                    Project Management
                  </span>
                </div>
                 
                <div
                  class="blog-post__author"
                >
                  <img
                    alt="text"
                    class="blog-post__author-image img_lazy"
                    data-src="https://images.prismic.io/superpupertest/2d5f5b47-2b05-493d-9cca-aaaec6245bc6_01.jpeg?auto=compress,format&rect=0,0,800,800&w=40&h=40"
                  />
                   
                  <div
                    class="blog-post__author-info"
                  >
                    <p
                      class="blog-post__author-name"
                    >
                      
      text
    
                    </p>
                     
                    <div
                      class="blog-post__data-of-creation"
                    >
                      <span
                        class="blog-post__author-title"
                      >
                        Delivery manager
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </nuxtlink-stub>
        </section>
      </div>
    </div>
     
    <!---->
     
    <!---->
     
    <div
      class="progress-bar"
    />
  </div>
</div>
`;

exports[`Post component should render correctly with default props 1`] = `
<div>
  <div
    class="blog-post"
  >
    <div
      class="blog-post__background"
    />
     
    <div
      class="blog-post__inner-container"
    >
      <div
        class="blog-post__share"
      >
        <sharenetwork-stub
          class="blog-post__share-link blog-post__share-link icon-wrapper__icon icon-wrapper__facebook-icon"
          network="facebook"
          title=""
          url=""
        />
         
        <sharenetwork-stub
          class="blog-post__share-link blog-post__share-link icon-wrapper__icon icon-wrapper__twitter-icon"
          network="twitter"
          title=""
          url=""
        />
         
        <sharenetwork-stub
          class="blog-post__share-link blog-post__share-link icon-wrapper__icon icon-wrapper__linkedin-icon"
          network="linkedin"
          title=""
          url=""
        />
      </div>
       
      <div
        class="blog-post__introduction-container"
      >
         
        <h1
          class="blog-post__blog-title title"
        >
          
    text
  
        </h1>
         
        <p
          class="blog-post__blog-sub-title"
        >
          
    text
  
        </p>
         
        <div
          class="blog-post__post-info"
        >
          <div
            class="blog-post__author"
          >
            <img
              alt="text"
              class="blog-post__author-image img_lazy"
              data-src="https://images.prismic.io/superpupertest/c3b0ca2f-b28b-455c-b75b-fa880ee66c82_01.jpeg?auto=compress,format&rect=0,1,797,797&w=40&h=40"
            />
             
            <div
              class="blog-post__author-info"
            >
              <p
                class="blog-post__author-name"
              >
                
      text
    
              </p>
               
              <div
                class="blog-post__data-of-creation"
              >
                <span
                  class="blog-post__author-title"
                >
                  Delivery manager
                </span>
              </div>
            </div>
          </div>
           
          <div
            class="blog-post__date-tag"
          >
            <div
              class="blog-post__date"
            >
              
          
        
            </div>
             
            <!---->
          </div>
        </div>
         
        <img
          alt="How to Handover a Software Project to Another Team."
          class="blog-post__introduction-image blog-post__introduction-image--with-background"
          height="533"
          src="https://images.prismic.io/superpupertest/afa41339-f2f8-4f1d-8640-4b89d5d9d509_SPH.jpg?auto=compress,format&rect=0,1,2000,1084&w=983&h=533"
          width="983"
        />
      </div>
       
      <div
        class="blog-post__main-content"
      >
        <div
          class="table-of-contents"
        >
          <div
            class="table-of-contents__title"
          >
            
    Table of contents
  
          </div>
           
          <ol
            class="table-of-contents__list"
          />
        </div>
         
        <section
          class="blog-post__text-container"
        />
      </div>
    </div>
     
    <!---->
     
    <!---->
     
    <!---->
     
    <div
      class="progress-bar"
    />
  </div>
</div>
`;
